[gd_scene load_steps=14 format=3 uid="uid://c1tv7g4ssauru"]

[ext_resource type="Script" path="res://assets/scripts/spells/conflagrate.gd" id="1_w1lis"]
[ext_resource type="Texture2D" uid="uid://cdk267i0i80jy" path="res://assets/sprites/dungeon/fire_.png" id="2_eqfx4"]
[ext_resource type="Resource" uid="uid://ba1rm1w5wl0iy" path="res://assets/data/abilities/burning.tres" id="2_y37v0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d85sh"]
atlas = ExtResource("2_eqfx4")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqory"]
atlas = ExtResource("2_eqfx4")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_txlnw"]
atlas = ExtResource("2_eqfx4")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6c5x"]
atlas = ExtResource("2_eqfx4")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7ogn"]
atlas = ExtResource("2_eqfx4")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpd4u"]
atlas = ExtResource("2_eqfx4")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_giwgs"]
atlas = ExtResource("2_eqfx4")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1wgu"]
atlas = ExtResource("2_eqfx4")
region = Rect2(64, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ng0eb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d85sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqory")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txlnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6c5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7ogn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpd4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giwgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1wgu")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_urr0g"]
radius = 9.0

[node name="Conflagrate" type="Node2D"]
z_index = 4
script = ExtResource("1_w1lis")
synergy_effect = ExtResource("2_y37v0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ng0eb")
autoplay = "default"
frame = 7
frame_progress = 1.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_urr0g")

[node name="InitialDamageTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="MidDamageTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true
autostart = true

[node name="FinalDamageTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
autostart = true

[connection signal="timeout" from="InitialDamageTimer" to="." method="_on_initial_damage_timer_timeout"]
[connection signal="timeout" from="MidDamageTimer" to="." method="_on_mid_damage_timer_timeout"]
[connection signal="timeout" from="FinalDamageTimer" to="." method="_on_final_damage_timer_timeout"]
